# old.hi.imnhan.com

./: .gitignore  .gitmodules  404.html  CNAME  Makefile  README.md  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements-src.txt  requirements.txt  tags.html
about/: index.html
author/bui-thanh-nhan/: index.html
category/consoom/: index.html
category/misc/: index.html
category/posts/: index.html
category/side-projects/: index.html
category/tutorials/: index.html
content/: bypass-rmit-domain-blocker-to-watch-hdviet.md  fix-rmit-wifi-issue-with-ubuntu-13-04.md  have-you-built-anything-cool-.md  i-did-not-sign-that-stupid-petition.md  ibus-is-dead-to-me-use-fcitx-instead.md  installing-programs-in-ubuntu.md  introducing-pytaku.md  italic-text-in-vim-tmux-gnome-terminal.md  look-ma-no-stock-theme.md  modern-vim-plugin-management-pathogen-vs-vundle.md  modern-vim-plugin-management-pathogen-vs-vundle_vi.md  my-first-diy-fightstick-2.md  my-first-diy-fightstick.md  set-up-node-webkit-development-environment.md  virtualenvwrapper-with-python2-python3.md  what-i-did-after-installing-manjaro.md  why-i-use-linux-automation.md
content/extra/: 404.html  CNAME  README.markdown  cal.html
feeds/: all.atom.xml  atom.xml  bui-thanh-nhan.atom.xml  bui-thanh-nhan.rss.xml  consoom.atom.xml  misc.atom.xml  posts.atom.xml  side-projects.atom.xml  tutorials.atom.xml
ideas/: index.html
nhanb-theme/: CREDITS.mkd  README.mkd
notes/: index.html
projects/: index.html
tag/arch/: index.html
yaks/: index.html
(+82 files in other folders)
