[tool.poetry]
name = "imnhan.com"
version = "0.1.0"
description = ""
authors = ["nhanb <hi@imnhan.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.1"
markdown = "^3.1"
typogrify = "^2.0"
pelican-minify = "^0.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
ghp-import = "^0.5.5"
python-language-server = "^0.28.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
