[tool.poetry]
name = "imnhan.com"
version = "0.1.0"
description = ""
authors = ["nhanb <hi@imnhan.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typogrify = "^2.0"
pelican-minify = "^0.9.0"
pelican = {extras = ["markdown"], version = "^4.8.0"}

[tool.poetry.dev-dependencies]
ghp-import = "^0.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
